<resources>
    <string name="successful">Successfully marked as favourites</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="api_key">AIzaSyCDylplefNyWlLDoBL_n2VFjwlMWvq3sBg  </string>
    <string name="app_name">Cavalli Club</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id_test">175703936145004</string>
    <string name="facebook_app_id">424817654624118</string>
    <string name="fb_login_protocol_scheme">fb424817654624118</string>
    <string name="error_passwords_do_not_match">Passwords do not match.</string>
    <string name="error_could_not_connect">Could not connect to server. Please try again later.</string>
    <string name="error_cannot_create_account">Account already exists!</string>
    <string name="error_cannot_sign_in">Please provide correct Email and Password</string>
    <string name="crash_toast_text">Sorry for inconvenience, we will get this issue fixed!</string>
    <string name="msg_connection_failed">Error! Connection to server failed.</string>
    <string name="msg_connection_error">Please check your internet connection</string>
    <string name="common.months">months</string>
    <string name="common.weeks">weeks</string>
    <string name="common.days">days</string>
    <string name="common.hrs">hrs</string>
    <string name="common.mins">mins</string>
    <string name="common.secs">secs</string>
    <string name="common.ago">ago</string>
    <string name="typeface_not_found">Typeface %$1 not found, or could not be loaded.
        Showing default typeface.</string>
    <string name="app">AnyTextView</string>
    <string name="assets_fonts_folder">fonts/</string>
    <string name="txt_enter_phone_no">Enter Phone No.</string>
    <string name="txt_register_text">Verificaion process is required to verify the phone no.</string>
    <string name="message_quit">Are you sure you want to exit?</string>
    <string name="message_wait">Please wait while data is loading.</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="click_here">  Click Here</string>
    <string name="imgdesc_signup">Sign Up</string>
    <string name="imgdesc_signin">Sign In</string>
    <string name="back_to_login"><u>Back to Login</u></string>
    <string name="remember_me">remember me</string>
    <string name="user_name">User Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="messages">Messages</string>
    <string name="settings">Settings</string>
    <string name="search_hint">Search Ads, User or Category</string>
    <string name="password_sent">Your password will be sent to your \nemail address</string>
    <string name="reason_for_rejection">REASON</string>
    <string name="old_password">Old Password</string>
    <string name="old_phone_num">Old Phone Number</string>
    <string name="new_phone_num">New Phone Number</string>
    <string name="via_email">Via Email</string>
    <string name="via_sms">Via SMS</string>
    <string name="tell_a_friend">TELL A FRIEND</string>
    <string name="contact_email">contact@voltas.com</string>
    <string name="contact_phone">5555 555 555</string>
    <string name="enter_text">Enter Text</string>
    <string name="you_paid">YOU PAID</string>
    <string name="tap_to_rate">TAP A STAR TO RATE DRIVER</string>
    <string name="contact_address">Columbus College of Arts, New York</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and types
        etting industry. Lorem Ipsum has been the industrys standard dummy text ever sinc
        e the 1500s, when an unknown printer took a galley of type and scrambled it t
        o make a type specimen book. It has survived not only five centuries, but
         also the leap into electronic typesetting, remaining essentially unchanged
         . It was popularised in the 1960s with the release of Letraset sheets cont
         aining Lorem Ipsum passages, and more recently with desktop publishing so
         ftware like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="lorem_ipsum_very_small">Lorem Ipsum is simply dummy text of the printing and types
        etting industry. Lorem Ipsum has been the industrys standard dummy text ever. </string>
    <string name="lorem_ipsum_very_small_new"><b>Description :</b> Lorem Ipsum is simply dummy text of the printing and types
        etting industry. Lorem Ipsum has been the industrys standard dummy text ever. </string>
    <string name="lorem_ipsum_new_line">Lorem Ipsum \n is simply dummy text  \n of the printing  \n and types
        etting industry.\n Lorem Ipsum has been \n the industrys standard \n dummy text ever. </string>
    <string name="lorem_ipsum_long">Lorem Ipsum is simply dummy text of the printing and types
        etting industry. Lorem Ipsum has been the industrys standard dummy text ever sinc
        e the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but
         also the leap into electronic typesetting, remaining essentially unchanged
         . It was popularised in the 1960s with the release of Letraset sheets cont
         aining Lorem Ipsum passages, and more recently with desktop publishing so
         ftware like Aldus PageMaker including versions of Lorem Ipsum.Lorem Ipsum is simply dummy text of the printing and types
        etting industry. Lorem Ipsum has been the industrys standard dummy text ever sinc
        e the 1500s, when an unknown printer took a galley of type and scrambled it t
        o make a type specimen book. It has survived not only five centuries, but
         also the leap into electronic typesetting, remaining essentially unchanged
         . It was popularised in the 1960s with the release of Letraset sheets cont
         aining Lorem Ipsum passages, and more recently with desktop publishing so
         ftware like Aldus PageMaker including versions of Lorem IpsumLorem Ipsum is simply dummy text of the printing and types
        etting industry. Lorem Ipsum has been the industrys standard dummy text ever sinc
        e the 1500s, when an unknown printer took a galley of type and scrambled it t
        o make a type specimen book. It has survived not only five centuries, but
         also the leap into electronic typesetting, remaining essentially unchanged
         . It was popularised in the 1960s with the release of Letraset sheets cont
         aining Lorem Ipsum passages, and more recently with desktop publishing so
         ftware like Aldus PageMaker including versions of Lorem Ipsum</string>
    <string name="lorem_ipsum_small">Lorem Ipsum is simply dummy text of the printing and types
        etting industry the 1500s. </string>
    <string name="this_is_login_fragment">This is Login Fragment</string>
    <string name="default_hint_text">Where are you going?</string>
    <string name="connection_lost">No Internet Found</string>
    <string name="font_normal">Poppins-Regular_1.ttf</string>
    <string name="font_bold">Poppins-Bold_1.ttf</string>
    <string name="font_italic_bold">Roboto-Italic_2.ttf</string>
    <string name="font_italic_light">Roboto-LightItalic_2.ttf</string>
    <string name="font_handwriting">segoeprb_1.ttf</string>
    <string name="notification">Notifications</string>
    <string name="app_font_light">Poppins-Light.ttf</string>
    <string name="app_font_light_one">Poppins-Light_1.ttf</string>
    <string name="app_font_medium">Poppins-Medium.ttf</string>
    <string name="app_font_regular">Poppins-Regular.ttf</string>
    <string name="app_font_bold">Poppins-Bold.ttf</string>
    <string name="app_font_semi_bold">Poppins-SemiBold.ttf</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="signup">Signup</string>
    <string name="password_length_alert">Password should be 6 or more characters long.</string>
    <string name="submit">Submit</string>
    <string name="full_name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="cfm_password">Confirm Password</string>
    <string name="or">or</string>
    <string name="signup_with_facebook">Signup with Facebook</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="implemented_in_beta">Will be implemented in beta.</string>
    <string name="mismatch_confirm_password">Confirm Password does not match password.</string>
    <string name="correct_phone_number">Please enter correct phone number.</string>
    <string name="enter_phone_number">Please enter phone number to proceed.</string>
    <string name="enter_correct_name">Please enter correct name.</string>
    <string name="the_restaurant">THE RESTAURANT</string>
    <string name="under_wonderful_shining_lights">under wonderful shining lights</string>
    <string name="search">Search</string>
    <string name="search_button">Search</string>
    <string name="categories">CATEGORIES</string>
    <string name="see_all">SEE ALL</string>
    <string name="reservations">RESERVATIONS</string>
    <string name="reservations_small">Reservations</string>
    <string name="menu">MENU</string>
    <string name="menu_small">Menu</string>
    <string name="guest_list">GUEST LIST</string>
    <string name="competition">COMPETITION</string>
    <string name="music">MUSIC</string>
    <string name="music_small">Music</string>
    <string name="bar_ordering">BAR ORDERING</string>
    <string name="cavalli_nights">CAVALLI NIGHTS</string>
    <string name="membership">MEMBERSHIP</string>
    <string name="membership_small">Membership</string>
    <string name="events_bookings">EVENTS BOOKINGS</string>
    <string name="events_calendar">CAVALLI CALENDAR</string>
    <string name="settingss">SETTINGS</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="homes">HOME</string>
    <string name="latest_updates">LATEST UPDATES</string>
    <string name="event_calendar">Cavalli Calendar</string>
    <string name="cavalli_social">Cavalli Social</string>
    <string name="package_info">Package Information</string>
    <string name="gallery">Gallery</string>
    <string name="logout">Logout</string>
    <string name="about_us">About Us</string>
    <string name="full_names">Full Name</string>
    <string name="select_date">Select Date</string>
    <string name="submit_request">Submit Request</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="billing_detail">Billing Details</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_condition">Terms &amp; Conditions</string>
    <string name="update">Update</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="change_password">Change Password</string>
    <string name="accept">Accept</string>
    <string name="credit_card">Credit Card</string>
    <string name="credit_card_num">Credit Card Number</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="cvv">CVV</string>
    <string name="name_appearing_on_the_card">Name Appearing On The Card</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_phone_number">Change Phone Number</string>
    <string name="version">Version</string>
</resources>