<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:onClick="onClick"
    android:orientation="vertical"
    android:padding="@dimen/x20">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:scrollbars="none">


        <com.ingic.cavalliclub.ui.views.AnyTextView
            android:id="@+id/txt_term_condition"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.4"
            android:gravity="start|top"
            android:paddingBottom="@dimen/x10"
            android:textColor="@color/black"
            android:textSize="@dimen/x14"
            app:typeface="@string/app_font_light"
            tools:text="@string/lorem_ipsum_small" />

    </ScrollView>

    <Button
        android:id="@+id/btn_accept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/x10"
        android:layout_marginTop="@dimen/x10"
        android:background="@drawable/loginbtn"
        android:text="@string/accept"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/x14"
        android:visibility="gone" />

</LinearLayout>