<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/x25">

    <com.application.cavalliclub.ui.views.AnyEditTextView
        android:id="@+id/txt_current_pass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x40"
        android:layout_marginTop="@dimen/x10"
        android:paddingStart="@dimen/x8"
        android:drawableStart="@drawable/pass1"
        android:drawablePadding="@dimen/x9"
        android:background="@color/transparent"
        android:gravity="center_vertical"
        android:hint="@string/current_password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:maxLength="16"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/app_gray"
        android:textSize="@dimen/x12"
        app:typeface="@string/font_normal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:background="@color/view_gray"/>

    <com.application.cavalliclub.ui.views.AnyEditTextView
        android:id="@+id/txt_new_pass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x40"
        android:layout_marginTop="@dimen/x10"
        android:paddingStart="@dimen/x8"
        android:drawableStart="@drawable/pass1"
        android:drawablePadding="@dimen/x9"
        android:background="@color/transparent"
        android:gravity="center_vertical"
        android:hint="@string/new_password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:maxLength="16"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/app_gray"
        android:textSize="@dimen/x12"
        app:typeface="@string/font_normal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:background="@color/view_gray"/>

    <com.application.cavalliclub.ui.views.AnyEditTextView
        android:id="@+id/txt_confirm_new_pass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x40"
        android:layout_marginTop="@dimen/x10"
        android:paddingStart="@dimen/x8"
        android:drawableStart="@drawable/pass1"
        android:drawablePadding="@dimen/x9"
        android:background="@color/transparent"
        android:gravity="center_vertical"
        android:hint="@string/confirm_new_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:maxLength="16"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/app_gray"
        android:textSize="@dimen/x12"
        app:typeface="@string/font_normal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:background="@color/view_gray"/>
    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x25"
        android:background="@drawable/loginbtn"
        android:text="@string/update"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/x14" />

</LinearLayout>