<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.ingic.cavalliclub.ui.views.AnyEditTextView
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x30"
        android:layout_marginLeft="@dimen/x40"
        android:layout_marginRight="@dimen/x50"
        android:layout_marginTop="@dimen/x30"
        android:background="@color/transparent"
        android:drawableLeft="@drawable/email_forgot"
        android:drawablePadding="@dimen/x10"
        android:gravity="center_vertical"
        android:hint="@string/email_address"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        android:maxLength="30"
        android:maxLines="1"
        android:textColor="@color/text_gray"
        android:textColorHint="@color/light_grey"
        android:textSize="@dimen/x16"
        app:testType="email"
        app:typeface="@string/app_font_regular" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:layout_marginTop="@dimen/x5"
        android:layout_marginLeft="@dimen/x30"
        android:layout_marginRight="@dimen/x30"
        android:background="@color/view_gray" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x20"
        android:layout_marginLeft="@dimen/x20"
        android:layout_marginRight="@dimen/x20"
        android:background="@drawable/loginbtn"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/x18"/>

</LinearLayout>