<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/x20">

        <com.ingic.cavalliclub.ui.views.AnyEditTextView
            android:id="@+id/edit_fullname"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x40"
            android:layout_marginTop="@dimen/x10"
            android:background="@color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/full_names"
            android:paddingStart="@dimen/x5"
            android:textColor="@color/app_gray"
            android:textSize="@dimen/x14"
            app:typeface="@string/font_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:background="@color/view_gray" />




        <com.ingic.cavalliclub.ui.views.AnyEditTextView
            android:id="@+id/txtMessages"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x200"
            android:layout_marginTop="@dimen/x25"
            android:background="@drawable/rounded_rect"
            android:gravity="top"
            android:hint="Your Message.."
            android:padding="@dimen/x8"
            android:textColor="@color/app_gray"
            android:textSize="@dimen/x14"
            app:typeface="@string/font_normal" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x50"
            android:layout_marginTop="@dimen/x25"
            android:background="@drawable/loginbtn"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/x15" />

    </LinearLayout>
</ScrollView>